<resources>
    <string name="app_name">Go Navigator</string>
    <string name="agregar_ruta">Agregar Ruta</string>
    <string name="nombre_ruta">Nombre de la ruta</string>
    <string name="inicial">Dirección Inicial</string>
    <string name="direccion">Ingrese Dirección</string>
    <string name="calcular_ruta">Calcular Ruta</string>
    <string name="eliminar_ruta">Eliminar Ruta</string>
    <string name="eliminar_direccion">Eliminar Direccion</string>
    <string name="lista_rutas">Lista de Rutas</string>
    <string name="editar_ruta">Editar Ruta</string>
    <string name="mapa_string">Mapa</string>
    <string name="ruta_string">Ruta</string>
    <string name="go">Go</string>
    <string name="direccion_destino">Ingrese Destino</string>
    <string name="finalizada">Finalizada</string>
    <string name="pos_actual">Posición Actual</string>
    <string name="ingrese_nombre">Ingrese el nombre que tendrá la Ruta</string>
    <string name="ingrese_dir_ini">Ingrese la dirección desde donde se partirá</string>
    <string name="ingrese_dir">Ingrese el resto de direcciones</string>
    <string name="info_ini">Información de la dirección inicial</string>
    <string name="creacion">Creación de ruta</string>
    <string name="logo">Logo</string>
    <string name="datos">Datos de la ruta</string>
    <string name="rutas_creadas">Rutas creadas anteriormente:</string>
</resources>