<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quantum_grey300"
    tools:context=".RutaActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_personalizada"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/quantum_teal700"
        android:elevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/alba"
            android:text="@string/ingrese_nombre" />

        <EditText
            android:id="@+id/et_nombre_ruta"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textSize="24sp"
            android:ems="10"
            android:fontFamily="@font/chocolate_bold"
            android:hint="@string/nombre_ruta"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/alba"
            android:text="@string/ingrese_dir_ini" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/et_dir_inicial"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:ems="10"
                android:fontFamily="@font/chocolate_bold"
                android:hint="@string/inicial"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <ImageView
                android:id="@+id/img_ubicacion_actual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/et_dir_inicial"
                android:layout_alignEnd="@id/et_dir_inicial"
                android:layout_alignBottom="@+id/et_dir_inicial"
                android:contentDescription="@string/pos_actual"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_gps_fixed_24" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="360dp"
            android:textSize="12sp"
            android:fontFamily="@font/alba"
            android:layout_height="wrap_content"
            android:text="@string/info_ini" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_resource"
            android:gravity="center"
            android:padding="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nombre_dir_ini"
                android:textSize="24sp"
                android:fontFamily="@font/chocolate_bold"
                android:layout_width="360dp"
                android:layout_marginBottom="1dp"
                android:layout_height="wrap_content" />
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/tv_ciudad_dir_ini"
                android:textSize="24sp"
                android:fontFamily="@font/chocolate_bold"
                android:layout_width="360dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:fontFamily="@font/alba"
            android:text="@string/ingrese_dir" />

        <EditText
            android:id="@+id/et_dir_nueva"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="16dp"
            android:ems="10"
            android:fontFamily="@font/chocolate_bold"
            android:hint="@string/direccion_destino"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <ListView
            android:id="@+id/lv_direcciones"
            android:layout_width="360dp"
            android:layout_height="225dp"
            android:background="@drawable/border_resource"
            android:padding="3dp"/>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_eliminar_ruta"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/chocolate_bold"
                android:textColor="@color/quantum_grey300"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/eliminar_ruta" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_calcular_ruta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:fontFamily="@font/chocolate_bold"
                android:textColor="@color/quantum_grey300"
                android:backgroundTint="@color/quantum_teal700"
                android:text="@string/calcular_ruta" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>